--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -56,6 +56,18 @@
             <setting name="nom_p_venta" serializeAs="String">
                 <value />
             </setting>
+            <setting name="cantidad_grilla" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="nom_prod_grilla" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="precio_prod_grilla" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="id_prod_grilla" serializeAs="String">
+                <value />
+            </setting>
         </WindowsFormsApplication1.Properties.Settings>
     </userSettings>
 </configuration>
