--- a/WindowsFormsApplication1/Properties/Settings.settings
+++ b/WindowsFormsApplication1/Properties/Settings.settings
@@ -44,5 +44,17 @@
     <Setting Name="nom_p_venta" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="cantidad_grilla" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="nom_prod_grilla" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="precio_prod_grilla" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="id_prod_grilla" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
